Update bootstrap and dependency versions