@@ -13,6 +13,7 @@ DEOBFUSCATED=/tmp/deobfuscated.jar
 DEOBFUSCATED_WITH_MAPPINGS=/tmp/deobfuscated_with_mappings.jar
 VANILLA_INJECTED=/tmp/vanilla_injected.jar
 RS_CLIENT_REPO=/home/runelite/runelite
+STATIC_RUNELITE_NET=/home/runelite/static.runelite.net
 
 curl -L oldschool.runescape.com/jav_config.ws > $JAV_CONFIG
 
@@ -62,14 +63,41 @@ git config user.name "Runelite auto updater"
 git config user.email runelite@runelite.net
 
 git commit -m "Update $VANILLA_VER"
-#git push
+git pull --no-edit
+git push
+
+mvn install -DskipTests
 
 # Now update our version
 cd $BASEDIR
 find $BASEDIR -name pom.xml -exec sed -i "s/<version>.*<\/version>.*rs version.*/<version>$VANILLA_VER.1-SNAPSHOT<\/version> <!-- rs version -->/" {} \;
 
+# Bump versions from above install
+mvn versions:use-latest-versions -DallowSnapshots
+
 git config user.name "Runelite auto updater"
 git config user.email runelite@runelite.net
 
 git commit -m "Update $VANILLA_VER"
-#git push
+git pull --no-edit
+git push
+
+# Perform release
+cd $RS_CLIENT_REPO
+# I dont know why this also seems to perform the release too, maybe the -B
+mvn release:clean release:prepare -Darguments="-DskipTests" -B
+
+# I couldn't figure out a better way to do this
+RELEASED_VER=git show `git describe --abbrev=0`:runelite-client/pom.xml | grep version | head -n3 | tail -n1 | sed 's/[a-z<>/\t]*//g'
+
+# Update static.runelite.net
+cd $STATIC_RUNELITE_NET
+echo '{"client":{"groupId":"net.runelite","artifactId":"client","version":"VERSION",classifier":"","extension":"jar","properties":{}},"clientJvmArguments":["-Xmx256m","-Xss2m","-Dsun.java2d.noddraw\u003dtrue","-XX:CompileThreshold\u003d1500","-Xincgc","-XX:+UseConcMarkSweepGC","-XX:+UseParNewGC"]}' | sed "s/VERSION/$RELEASED_VER/" > bootstrap.json
+git add bootstrap.json
+
+git config user.name "Runelite auto updater"
+git config user.email runelite@runelite.net
+
+git commit -m "Release $RELEASED_VER"
+git pull --no-edit
+git push
